--- a/Resources/views/Job/pendingAnnouncerCreateForm.html.twig
+++ b/Resources/views/Job/pendingAnnouncerCreateForm.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="panel panel-default">
         <div class="panel-body">
-            <div class="row">
+            <div class="col-md-3">
                 {% set params = app.request.attributes.get('_route_params') %}
                 {% if params.lang == 'fr' %}
                     {% set img = asset('bundles/formalibrejob/images/fwb.jpg') %}
@@ -12,25 +12,28 @@
                 {% else %}
                     {% set img = asset('bundles/formalibrejob/images/dgpp.jpg') %}
                 {% endif %}
-                <div class="col-md-3"> <img width=200px src="{{ img }}"> </div>
+                <img width=200px src="{{ img }}">
             </div>
-            <div class="row">
-                <div class="col-md-3">  </div>
-                <div class="col-md-9" style="color: red;"> <h1><b> {{ 'pending_announcement_form_message'|trans({}, 'job') }} </b></h1> </div>
+            {% form_theme form 'FormaLibreJobBundle::form_theme_captcha.html.twig' %}
+            <div class="col-md-6" style="padding-top: 55px;">
+                <h1 style="color: red; text-align: center;"><b> {{ 'pending_announcement_form_message'|trans({}, 'job') }} </b></h1>
+                </br>
+                <form id="pending-announcer-create-form"
+                      action="{{ path('formalibre_job_pending_announcer_create', {'lang': lang}) }}"
+                      method="POST"
+                      {{ form_enctype(form) }}
+                >
+                    {{ form_widget(form) }}
+                    <div class="captcha" style="font-size: x-small;">
+                        {{ 'captcha_reason'|trans({}, 'job') }}
+                    </div>
+                    </br>
+                    <button id="submit-btn" type="submit" class="btn btn-primary disabled">
+                        {{ 'ok'|trans({}, 'platform') }}
+                    </button>
+                </form>
             </div>
-        </div>
-        <div class="panel-body">
-            <form id="pending-announcer-create-form"
-                  action="{{ path('formalibre_job_pending_announcer_create', {'lang': lang}) }}"
-                  method="POST"
-                  {{ form_enctype(form) }}
-            >
-                {{ form_widget(form) }}
-                <br>
-                <button id="submit-btn" type="submit" class="btn btn-primary disabled">
-                    {{ 'ok'|trans({}, 'platform') }}
-                </button>
-            </form>
+            <div class="col-md-3"></div>
         </div>
     </div>
 {% endblock %}
@@ -40,7 +43,7 @@
     <script type="text/javascript">
         $('#pending_announcer_form_userType').on('change', function () {
             var value = $(this).val();
-            
+
             if (value === 'announcer') {
                 $('#submit-btn').removeClass('disabled');
             } else if (value === 'seeker') {
