--- a/Resources/views/Job/announcerWidget.html.twig
+++ b/Resources/views/Job/announcerWidget.html.twig
@@ -8,7 +8,7 @@
             </li>
             <li>
                 <a href="{{ path('formalibre_job_announcer_job_requests_list', {'announcer': announcer.getId()}) }}">
-                    {{ 'job_requests_list'|trans({'%community%': announcer.getCommunity().getName()}, 'job') }}
+                    {{ 'job_requests_list'|trans({'%community%': announcer.getCommunity().getName()|trans({}, 'job')}, 'job') }}
                 </a>
             </li>
             <li>
