--- a/Resources/views/Job/openJobOffer.html.twig
+++ b/Resources/views/Job/openJobOffer.html.twig
@@ -11,7 +11,7 @@
                     'href': path('formalibre_job_seeker_job_requests_list')
                 },
                 {
-                    'name': jobOffer.getCommunity().getName(),
+                    'name': jobOffer.getCommunity().getName()|trans({}, 'job'),
                     'href': path('formalibre_job_offers_open', {'community': jobOffer.getCommunity().getId() })
                 },
                 {
